# audio-recorder

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  audio-recorder.sublime-workspace  build.sh  encode_wav.c  main.c  memory_check.sh  static_analysis.sh
include/: audio_file.h  encode.h  gui.h  gui_win.h  record.h
src/: audio_file.c  audio_file.h  encode.c  encode.h  gui.c  gui_win.c  main.c  record.c  record.h  resources.c
ui/: gui.gresource.xml  window.ui
